tests/samples/negative/generics/generic_struct_field_mismatch.ax
module generic_struct_field_mismatch;

struct Pair<T> {
    left: T;
    right: T;
}

fn main() -> i32 {
    let pair: Pair<i32> = Pair<i32> {
        left: true,
        right: 2,
    };
    return pair.right;
}
